multi-tier-app/k8s/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-postgres
  labels:
    app: demo-app
spec:
  ports:
    - port: 5432
  selector:
    tier: database
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-database
  labels:
    app: demo-app
spec:
  selector:
    matchLabels:
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: database
    spec:
      containers:
      - image: "postgres:17"
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
